[gd_scene load_steps=19 format=3 uid="uid://bognmtipmpagl"]

[ext_resource type="Script" uid="uid://cgafo4ylsaboq" path="res://src/game/unit/unit.gd" id="1_jwo67"]
[ext_resource type="PackedScene" uid="uid://decq4tsyqwsnf" path="res://scenes/game/components/enemy/enemy_component.tscn" id="2_3f0to"]
[ext_resource type="PackedScene" uid="uid://qhihjjgqvq2" path="res://scenes/game/components/entity/targeting_component.tscn" id="3_w46yl"]
[ext_resource type="Script" uid="uid://dggqofctyr00t" path="res://src/game/entity/components/shoot_component.gd" id="4_b7s4m"]
[ext_resource type="Script" uid="uid://wcrhk0ec1yhc" path="res://src/game/entity/components/movement_component.gd" id="5_44xn1"]
[ext_resource type="Script" uid="uid://po3pk21ocv50" path="res://src/game/unit/navigation.gd" id="6_ehyf4"]
[ext_resource type="Script" uid="uid://bsw4lyii8q1es" path="res://src/game/entity/components/select_target_component.gd" id="7_oe2w2"]
[ext_resource type="Script" uid="uid://bsdj25mfq2r1q" path="res://src/game/entity/components/town_reached_component.gd" id="8_2bx8l"]
[ext_resource type="Shader" uid="uid://benw47q1db78q" path="res://assets/shaders/horizontal_flip_shader.gdshader" id="9_jk8rh"]
[ext_resource type="Script" uid="uid://buwvnkw0fwgrv" path="res://src/game/entity/components/unit_visual_component.gd" id="10_yql2a"]
[ext_resource type="Script" uid="uid://co06gulxjdpyu" path="res://src/game/entity/components/death_animation_component.gd" id="11_akytc"]
[ext_resource type="Script" uid="uid://cxyp76ux7trh6" path="res://src/game/entity/components/scrap_drop_component.gd" id="12_51tjs"]
[ext_resource type="Script" uid="uid://c1kdnvjg8stu" path="res://src/game/entity/components/collision_radius_update.gd" id="13_eui8l"]
[ext_resource type="Theme" uid="uid://dsn2kfn1h5clt" path="res://assets/styles/health_bar.tres" id="14_f8w2l"]
[ext_resource type="Script" uid="uid://dgehqhmydvtpj" path="res://src/game/overlay/animation/animated_health_bar.gd" id="15_qdb8f"]
[ext_resource type="Theme" uid="uid://cavdiwmkdcr4c" path="res://assets/styles/armor_bar.tres" id="16_tcg5q"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ujgc1"]
shader = ExtResource("9_jk8rh")
shader_parameter/rect_info = Vector4(0, 48, 16, 16)
shader_parameter/progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bpvlt"]
radius = 8.0

[node name="Enemy" type="CharacterBody2D" groups=["enemy", "ground_enemy"]]
collision_layer = 2
collision_mask = 7
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_jwo67")

[node name="Components" type="Node2D" parent="."]

[node name="EnemyComponent" parent="Components" instance=ExtResource("2_3f0to")]

[node name="TargetingComponent" parent="Components" node_paths=PackedStringArray("main_entity") instance=ExtResource("3_w46yl")]
main_entity = NodePath("../..")
scan_area = true
collision_mask = 12

[node name="ShootComponent" type="Node2D" parent="Components"]
script = ExtResource("4_b7s4m")
update_collision_mask = true
projectile_collision_mask = 12

[node name="MovementComponent" type="Node2D" parent="Components"]
script = ExtResource("5_44xn1")

[node name="NavigationComponent" type="NavigationAgent2D" parent="Components" node_paths=PackedStringArray("controlled_character")]
script = ExtResource("6_ehyf4")
controlled_character = NodePath("../..")

[node name="SelectTargetComponent" type="Node2D" parent="Components"]
script = ExtResource("7_oe2w2")

[node name="TownReachedComponent" type="Node2D" parent="Components" node_paths=PackedStringArray("parent_to_compare")]
script = ExtResource("8_2bx8l")
parent_to_compare = NodePath("../..")

[node name="VisualsComponent" type="Sprite2D" parent="Components"]
material = SubResource("ShaderMaterial_ujgc1")
script = ExtResource("10_yql2a")

[node name="DeathAnimationComponent" type="Node2D" parent="Components" node_paths=PackedStringArray("root_node_to_get_parent_from")]
script = ExtResource("11_akytc")
root_node_to_get_parent_from = NodePath("../..")

[node name="ScrapDropComponent" type="Node2D" parent="Components"]
script = ExtResource("12_51tjs")

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_bpvlt")
script = ExtResource("13_eui8l")

[node name="HealthBar" type="ProgressBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -12.5
offset_top = 11.795
offset_right = 12.5
offset_bottom = 15.795
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("14_f8w2l")
show_percentage = false
script = ExtResource("15_qdb8f")

[node name="ArmorBar" type="ProgressBar" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -12.5
offset_top = 11.795
offset_right = 12.5
offset_bottom = 15.795
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("16_tcg5q")
show_percentage = false
script = ExtResource("15_qdb8f")

[connection signal="armor_changed" from="." to="ArmorBar" method="update_value"]
[connection signal="entity_data_changed" from="." to="Components/EnemyComponent" method="enemy_data_changed"]
[connection signal="entity_data_changed" from="." to="Components/MovementComponent" method="data_updated"]
[connection signal="entity_data_changed" from="." to="Components/TownReachedComponent" method="stats_updated"]
[connection signal="entity_data_changed" from="." to="Components/VisualsComponent" method="data_changed"]
[connection signal="entity_data_changed" from="." to="Components/ScrapDropComponent" method="data_changed"]
[connection signal="entity_data_changed" from="." to="Collision" method="data_changed"]
[connection signal="health_changed" from="." to="HealthBar" method="update_value"]
[connection signal="is_dying" from="." to="Components/TownReachedComponent" method="died"]
[connection signal="is_dying" from="." to="Components/DeathAnimationComponent" method="dying"]
[connection signal="is_dying" from="." to="Components/ScrapDropComponent" method="drop_requested"]
[connection signal="is_in_debug" from="." to="Components/NavigationComponent" method="set_debug"]
[connection signal="max_armor_changed" from="." to="ArmorBar" method="set_max_health"]
[connection signal="max_health_changed" from="." to="HealthBar" method="set_max_health"]
[connection signal="attack_groups_changed" from="Components/EnemyComponent" to="Components/TargetingComponent" method="set_attack_groups"]
[connection signal="change_attack_radius" from="Components/EnemyComponent" to="Components/TargetingComponent" method="set_radius"]
[connection signal="death_scene_changed" from="Components/EnemyComponent" to="Components/DeathAnimationComponent" method="data_updated"]
[connection signal="projectile_changed" from="Components/EnemyComponent" to="Components/ShootComponent" method="set_projectile"]
[connection signal="request_fire" from="Components/EnemyComponent" to="Components/ShootComponent" method="fire"]
[connection signal="thread_determination_changed" from="Components/EnemyComponent" to="Components/TargetingComponent" method="set_current_threat_determination"]
[connection signal="active_state_changed" from="Components/TargetingComponent" to="Components/EnemyComponent" method="enemy_active_changed"]
[connection signal="change_body_or_shape_entered" from="Components/TargetingComponent" to="Components/TargetingComponent/AreaOfOperation" method="change_body_or_shape_entered"]
[connection signal="new_target_found" from="Components/TargetingComponent" to="Components/EnemyComponent" method="set_current_target"]
[connection signal="add_projectile" from="Components/ShootComponent" to="." method="add_projectile_requested"]
[connection signal="change_velocity" from="Components/MovementComponent" to="." method="set_velocity"]
[connection signal="change_velocity" from="Components/MovementComponent" to="Components/VisualsComponent" method="velocity_changed"]
[connection signal="change_velocity" from="Components/NavigationComponent" to="Components/MovementComponent" method="set_velocity"]
[connection signal="new_target_required" from="Components/NavigationComponent" to="." method="set_target"]
[connection signal="set_move_command" from="Components/SelectTargetComponent" to="Components/NavigationComponent" method="set_move_command"]
[connection signal="destroy_requested" from="Components/TownReachedComponent" to="." method="destroy"]
